--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no,  shrink-to-fit=no"
     />
-    <link rel="shortcut icon" href="//static.unubo.cloud/favicon.ico" />
-    <link rel="stylesheet" href="//static.unubo.cloud/style.css" />
+    <link rel="shortcut icon" href="//assets.unubo.com/unubo-cloud-examples/favicon.ico" />
+    <link rel="stylesheet" href="//assets.unubo.com/unubo-cloud-examples/style.css" />
 
     <title>Ruby - Unubo Cloud</title>
   </head>
@@ -15,7 +15,7 @@
   <body class="build-ruby">
     <div class="card">
       <div class="image-outer">
-        <img src="//static.unubo.cloud/images/ruby.png" alt="Ruby" />
+        <img src="//assets.unubo.com/unubo-cloud-examples/images/ruby.png" alt="Ruby" />
       </div>
 
       <div class="copy">
